--- a/11. Using Python to Access Web Data/Web Scraping.ipynb
+++ b/11. Using Python to Access Web Data/Web Scraping.ipynb
@@ -464,7 +464,7 @@
     "import time\n",
     "linklist = []\n",
     "for i in range(40):\n",
-    "    value = (i-1)*25\n",
+    "    value = i*25\n",
     "    url = 'https://www.linkedin.com/jobs/search/?start='+str(value)\n",
     "    urllist = getlink(url)\n",
     "    linklist = linklist + urllist\n",
